--- a/belonging/index.html
+++ b/belonging/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -33,7 +33,14 @@
       <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
     </form>
   </div>
-    <div class="bar">
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
       <li><a href="../html/purpose.html">寮の目的 &gt;</a></li>
       <li><a href="../html/facility.html">施設,設備 &gt;</a></li>
       <li><a href="../html/event.html">寮生活 &gt;</a></li>
@@ -42,14 +49,17 @@
       <li><a href="../html/examinee.html">受験生へ &gt;</a></li>
       <li><a href="../html/../belonging/index.html">寮生用ページ &gt;</a></li>
       <li><a href="../html/contact.html">お問い合わせ &gt;</a></li>
-    </div>
+    </ul>
+  </nav>
+</div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="75px">
-    <a href="../html/site.html"><p id="site">このサイトについて</p></a>
+    <img src="../img/footer.png" height="70px">
+    <a href="../html/site.html"><p><span id="site">このサイトについて</span></p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jquery -->
+  <script src="../script/common.js"></script> <!--JS取り込み-->
+  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   </body>
 </html>
