--- a/en/index.html
+++ b/en/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/index-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--CSS(幅0px以上1450px以下)-->
-  <link rel="stylesheet" href="../style/index.css" type="text/css" media="screen and (min-width:1230px)"> <!--CSS(幅1450px以上)-->
+  <link rel="stylesheet" href="../style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--CSS(幅0px以上1450px以下)-->
+  <link rel="stylesheet" href="../style/index.css" type="text/css" media="screen and (min-width:1450px)"> <!--CSS(幅1450px以上)-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -12,20 +12,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Takajo dormitory</title> <!--タイトル-->
-  <meta name="description" content="高城寮公式ホームページです。"> <!--簡易説明-->
+  <meta name="description" content="Official HomePage of Takajo Dormitory."> <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
   <meta property="og:title" content="Takajo dormitory"/> <!--タイトル-->
   <meta property="og:type" content="website">
-  <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
+  <meta property="og:description" content="Official HomePage of Takajo Dormitory." /> <!--簡易説明-->
   <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" /> <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="og:site_name" content="Takajo dormitory" /> <!--タイトル-->
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
-  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
 </head>
 <body>
-
+  <div id="page_top"><a href="#"></a></div>
   <div class="header">
     <a href="index.html"><img id="logo" src="../img/header.png" height="70px"></a>
     <a href="../index.html"><h3 id="lang">日本語</h3></a>
@@ -35,43 +35,85 @@
       <input id="search-buttom" class="fas" type="submit" value="search" method="get">
     </form>
   </div>
-    <div class="bar">
-      <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
-      <li><a href="facility.html">Facility &gt;</a></li>
-      <li><a href="event.html">Event &gt;</a></li>
-      <li><a href="cost.html">About cost &gt;</a></li>
-      <li><a href="parents.html">For parents &gt;</a></li>
-      <li><a href="examinee.html">For examinee &gt;</a></li>
-      <li><a href="belonging/index.html">For Dormitory students &gt;</a></li>
-      <li><a href="contact.html">Contact us &gt;</a></li>
-    </div>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
+        <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
+        <li><a href="facility.html">Facility &gt;</a></li>
+        <li><a href="event.html">Event &gt;</a></li>
+        <li><a href="cost.html">About cost &gt;</a></li>
+        <li><a href="parents.html">For parents &gt;</a></li>
+        <li><a href="examinee.html">For examinee &gt;</a></li>
+        <li><a href="belonging/index.html">For Dormitory students &gt;</a></li>
+        <li><a href="contact.html">Contact us &gt;</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="slider">
+    <ul class="slider-inner">
+    </ul>
+    <ul class="nav">
+    </ul>
+    <p id="arrow-prev" class="arrow">←</p>
+    <p id="arrow-next" class="arrow">→</p>
+  </div>
+  <div class="pair">
 
-    <div class="top">
-      <div class="slider">
-        <ul class="slider-inner">
-        </ul>
-        <ul class="nav">
-        </ul>
-        <p id="arrow-prev" class="arrow">←</p>
-        <p id="arrow-next" class="arrow">→</p>
-      </div>
-
-      <div class="department">
-        <h2 class="title">Dormitory's Endeavors</h2>
-        <a href="studying.html"><h3><i class="fas fa-graduation-cap"></i> Support for Studying</h3></a>
-        <a href="env.html"><h3><i class="fas fa-broom"></i> Improve Enviroment</h3></a>
-        <a href="meet.html"><h3><i class="fas fa-futbol"></i>  Exchange Event</h3></a>
-        <a href="safety.html"><h3><i class="fas fa-running"></i> For Safety</h3></a>
-        <a href="it.html"><h3><i class="fas fa-laptop-code"></i> Utilization IT</h3></a>
-      </div>
-    </div>
-
-    <h2 class="notice-title">Recent Notice</h2>
-    <section class="notice">
+    <div id="notice">
+    <h2 id="notice-title">Recent Notice</h2>
+    <section id="notice-inner">
       <ul class="list">
+        <li>
+          <dl>
+            <dt>10/10</dt>
+            <dd><a href="html/notice/test.html">[test配信]新型コロナウイルス感染症対策等について</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/8</dt>
+            <dd><a href="html/notice/test.html">[test配信]寮のWi-Fi改修に伴う寮内Wi-Fiの停止について</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/6</dt>
+            <dd><a href="html/notice/test.html">[test配信]高城寮ホームページのリニューアルについて</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/5</dt>
+            <dd><a href="html/notice/test.html">[test配信]お知らせが二行の場合のテストです。ああああああああああああああああああああああああああああああああああああ</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/4</dt>
+            <dd><a href="html/notice/test.html">[test配信]OverFlowの動作確認です！</a></dd>
+          </dl>
+        </li>
       </ul>
   </section>
-
+  </div>
+  <div class="department">
+    <h2 class="title">Dormitory's Endeavors</h2>
+    <a href="studying.html"><h3><i class="fas fa-graduation-cap"></i> Support for Studying</h3></a>
+    <a href="env.html"><h3><i class="fas fa-broom"></i> Improve Enviroment</h3></a>
+    <a href="meet.html"><h3><i class="fas fa-futbol"></i>  Exchange Event</h3></a>
+    <a href="safety.html"><h3><i class="fas fa-running"></i> For Safety</h3></a>
+    <a href="it.html"><h3><i class="fas fa-laptop-code"></i> Utilization IT</h3></a>
+  </div>
+  </div>
+  <div id="movie">
+    <h2><span>Short Movie</span></h2>
+    <video src="../video/overView.mov" controls loop width="1000px"></video>
+  </div>
   <h2 id="links-title">LINKS</h2>
   <div class="links">
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/english/">Tokuyama College of Technology.</a></p>
@@ -87,14 +129,15 @@
   </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="75px">
-    <a href="site.html"><p id="site">About this site</p></a>
+    <img src="../img/footer.png" height="70px">
+    <a href="site.html"><p><span id="site">About this site</span></p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jquery -->
-  <script src="../script/index.js"></script> <!--JS取り込み-->
-  <script src="../script/notice.js"></script> <!--JS取り込み-->
+  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="../script/indexEN.js"></script> <!--JS取り込み-->
+  <script src="../script/search.js"></script> <!--JS取り込み-->
   <script src="../script/sliderEN.js"></script> <!--JS取り込み-->
+  <script src="../script/common.js"></script> <!--JS取り込み-->
   </body>
 </html>
