--- a/en/it.html
+++ b/en/it.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -33,23 +33,34 @@
       <input id="search-buttom" class="fas" type="submit" value="search" method="get">
     </form>
   </div>
-  <div class="bar">
-    <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
-    <li><a href="facility.html">Facility &gt;</a></li>
-    <li><a href="event.html">Event &gt;</a></li>
-    <li><a href="cost.html">About cost &gt;</a></li>
-    <li><a href="parents.html">For parents &gt;</a></li>
-    <li><a href="examinee.html">For examinee &gt;</a></li>
-    <li><a href="belonging/index.html">For Dormitory students &gt;</a></li>
-    <li><a href="contact.html">Contact us &gt;</a></li>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <div id="bar">
+      <ul>
+        <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
+        <li><a href="facility.html">Facility &gt;</a></li>
+        <li><a href="event.html">Event &gt;</a></li>
+        <li><a href="cost.html">About cost &gt;</a></li>
+        <li><a href="parents.html">For parents &gt;</a></li>
+        <li><a href="examinee.html">For examinee &gt;</a></li>
+        <li><a href="belonging/index.html">For Dormitory students &gt;</a></li>
+        <li><a href="contact.html">Contact us &gt;</a></li>
+      </ul>
+    </div>
   </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="75px">
-    <a href="site.html"><p id="site">About this site</p></a>
+    <img src="../img/footer.png" height="70px">
+    <a href="site.html"><p><span id="site">About this site</span></p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jquery -->
+  <script src="../script/common.js"></script> <!--JS取り込み-->
+  <script src="../script/search.js"></script> <!--JS取り込み-->
+  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   </body>
 </html>
