--- a/html/location.html
+++ b/html/location.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/location-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--アクセスサイト用CSS-->
-  <link rel="stylesheet" href="../style/location.css" type="text/css" media="screen and (min-width:1230px)"> <!--アクセスサイト用CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/locationMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--アクセスサイト用CSS-->
+  <link rel="stylesheet" href="../style/location.css" type="text/css" media="screen and (min-width:1450px)"> <!--アクセスサイト用CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -35,25 +35,36 @@
       <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
     </form>
   </div>
-  <div class="bar">
-    <li><a href="purpose.html">寮の目的 &gt;</a></li>
-    <li><a href="facility.html">施設,設備 &gt;</a></li>
-    <li><a href="event.html">寮生活 &gt;</a></li>
-    <li><a href="cost.html">学寮経費 &gt;</a></li>
-    <li><a href="parents.html">保護者の方へ &gt;</a></li>
-    <li><a href="examinee.html">受験生へ &gt;</a></li>
-    <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
-    <li><a href="contact.html">お問い合わせ &gt;</a></li>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <div id="bar">
+      <ul>
+        <li><a href="purpose.html">寮の目的 &gt;</a></li>
+        <li><a href="facility.html">施設,設備 &gt;</a></li>
+        <li><a href="event.html">寮生活 &gt;</a></li>
+        <li><a href="cost.html">学寮経費 &gt;</a></li>
+        <li><a href="parents.html">保護者の方へ &gt;</a></li>
+        <li><a href="examinee.html">受験生へ &gt;</a></li>
+        <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
+        <li><a href="contact.html">お問い合わせ &gt;</a></li>
+      </ul>
+    </div>
   </div>
 
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.6527980452624!2d131.84742641564495!3d34.05277638060586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3544e0c9c1b77aa9%3A0xcef289fe15db68a5!2z5b6z5bGx5bel5qWt6auY562J5bCC6ZaA5a2m5qChIOmrmOWfjuWvrg!5e0!3m2!1sja!2sjp!4v1601156582820!5m2!1sja!2sjp" height="650" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" id="map"></iframe>
   <p id="address">学寮連絡先<br>〒745-8585　山口県周南市学園台<br>TEL&FAX　0834-29-6236</p>
   <div class="footer">
-    <img src="../img/footer.png" height="75px">
-    <a href="site.html"><p id="site">このサイトについて</p></a>
+    <img src="../img/footer.png" height="70px">
+    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jquery -->
+  <script src="../script/common.js"></script> <!--JS取り込み-->
+  <script src="../script/search.js"></script> <!--JS取り込み-->
+  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   </body>
 </html>
