--- a/html/notice/test.html
+++ b/html/notice/test.html
@@ -2,16 +2,16 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
-  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
+  <link rel="stylesheet" href="../../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link href="https://use.fwesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
+  <link rel="icon" href="../../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
+  <link rel="icon" href="../../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
   <link rel="apple-touch-icon-precomposed" href="../img/icon.png" /> <!--Apple用サイトアイコン-->
   <meta charset="utf-8"> <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>お問い合わせ | 高城寮</title> <!--タイトル-->
+  <title>お知らせ | 高城寮</title> <!--タイトル-->
   <meta name="description" content="高城寮公式ホームページです。"> <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
   <meta property="og:title" content="お問い合わせ | 高城寮"/> <!--タイトル-->
@@ -23,10 +23,11 @@
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
 <body>
+
   <div class="header">
-    <a href="../index.html"><img id="logo" src="../img/header.png" height="70px"></a>
-    <a href="../en/contact.html"><h3 id="lang">ENGLISH</h3></a>
-    <a href="location.html"><h3 id="access">アクセス</h3></a>
+    <a href="../../index.html"><img id="logo" src="../../img/header.png" height="70px"></a>
+    <a href="../../en/contact.html"><h3 id="lang">ENGLISH</h3></a>
+    <a href="../location.html"><h3 id="access">アクセス</h3></a>
     <form action="result.html" id="search">
       <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
       <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
@@ -40,29 +41,30 @@
     </p>
     <div id="bar">
       <ul>
-        <li><a href="purpose.html">寮の目的 &gt;</a></li>
-        <li><a href="facility.html">施設,設備 &gt;</a></li>
-        <li><a href="event.html">寮生活 &gt;</a></li>
-        <li><a href="cost.html">学寮経費 &gt;</a></li>
-        <li><a href="parents.html">保護者の方へ &gt;</a></li>
-        <li><a href="examinee.html">受験生へ &gt;</a></li>
-        <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
-        <li><a href="contact.html">お問い合わせ &gt;</a></li>
+        <li><a href="../purpose.html">寮の目的 &gt;</a></li>
+        <li><a href="../facility.html">施設,設備 &gt;</a></li>
+        <li><a href="../event.html">寮生活 &gt;</a></li>
+        <li><a href="../cost.html">学寮経費 &gt;</a></li>
+        <li><a href="../parents.html">保護者の方へ &gt;</a></li>
+        <li><a href="../examinee.html">受験生へ &gt;</a></li>
+        <li><a href="../../belonging/index.html">寮生用ページ &gt;</a></li>
+        <li><a href="../contact.html">お問い合わせ &gt;</a></li>
       </ul>
     </div>
   </div>
 
-  <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
-  <p id="contact">学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>E-mail : ryoumu＠tokuyama.ac.jp</p>
+  <div id="notice">
+
+  </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
-    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
+    <img src="../../img/footer.png" height="70px">
+    <a href="../site.html"><p><span id="site">このサイトについて</span></p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script src="../script/common.js"></script> <!--JS取り込み-->
-  <script src="../script/search.js"></script> <!--JS取り込み-->
+  <script src="../../script/common.js"></script> <!--JS取り込み-->
+  <script src="../..//script/search.js"></script> <!--JS取り込み-->
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   </body>
 </html>
