--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="style/index-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--CSS(幅0px以上1450px以下)-->
-  <link rel="stylesheet" href="style/index.css" type="text/css" media="screen and (min-width:1230px)"> <!--CSS(幅1450px以上)-->
+  <link rel="stylesheet" href="style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--CSS(幅0px以上1450px以下)-->
+  <link rel="stylesheet" href="style/index.css" type="text/css" media="screen and (min-width:1450px)"> <!--CSS(幅1450px以上)-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -23,11 +23,11 @@
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
   <link rel="stylesheet" href="style/navi.css" type="text/css">
   <link rel="stylesheet" href="style/slider.css" type="text/css"> <!--slider用CSS-->
-  <link rel="stylesheet" href="style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
 </head>
 <body>
-
+  <div id="page_top"><a href="#"></a></div>
   <div class="header">
     <a href=""><img id="logo" src="img/header.png" height="70px"></a>
     <a href="en/index.html"><h3 id="lang">ENGLISH</h3></a>
@@ -37,66 +37,111 @@
       <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
     </form>
   </div>
-    <div class="bar">
-      <li><a href="html/purpose.html">寮の目的 &gt;</a></li>
-      <li><a href="html/facility.html">施設,設備 &gt;</a></li>
-      <li><a href="html/event.html">寮生活 &gt;</a></li>
-      <li><a href="html/cost.html">学寮経費 &gt;</a></li>
-      <li><a href="html/parents.html">保護者の方へ &gt;</a></li>
-      <li><a href="html/examinee.html">受験生へ &gt;</a></li>
-      <li><a href="belonging/index.html">寮生用ページ &gt;</a></li>
-      <li><a href="html/contact.html">お問い合わせ &gt;</a></li>
-    </div>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
+        <li><a href="html/purpose.html">寮の目的 &gt;</a></li>
+        <li><a href="html/facility.html">施設,設備 &gt;</a></li>
+        <li><a href="html/event.html">寮生活 &gt;</a></li>
+        <li><a href="html/cost.html">学寮経費 &gt;</a></li>
+        <li><a href="html/parents.html">保護者の方へ &gt;</a></li>
+        <li><a href="html/examinee.html">受験生へ &gt;</a></li>
+        <li><a href="belonging/index.html">寮生用ページ &gt;</a></li>
+        <li><a href="html/contact.html">お問い合わせ &gt;</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="slider">
+    <ul class="slider-inner">
+    </ul>
+    <ul class="nav">
+    </ul>
+    <p id="arrow-prev" class="arrow">←</p>
+    <p id="arrow-next" class="arrow">→</p>
+  </div>
 
-    <div class="top">
-      <div class="slider">
-        <ul class="slider-inner">
-        </ul>
-        <ul class="nav">
-        </ul>
-        <p id="arrow-prev" class="arrow">←</p>
-        <p id="arrow-next" class="arrow">→</p>
-      </div>
+  <div class="pair">
 
-      <div class="department">
-        <h2 class="title">寮の取り組み</h2>
-        <a href="html/studying.html"><h3><i class="fas fa-graduation-cap"></i> 学習面のサポート</h3></a>
-        <a href="html/env.html"><h3><i class="fas fa-broom"></i> 寮内環境の整備</h3></a>
-        <a href="html/meet.html"><h3><i class="fas fa-futbol"></i> 寮生同士の交流</h3></a>
-        <a href="html/safety.html"><h3><i class="fas fa-running"></i> 安全の確保</h3></a>
-        <a href="html/it.html"><h3><i class="fas fa-laptop-code"></i> 情報技術の活用</h3></a>
-      </div>
-    </div>
-
-    <h2 class="notice-title">お知らせ</h2>
-    <section id="notice">
+    <div id="notice">
+    <h2 id="notice-title">お知らせ</h2>
+    <section id="notice-inner">
       <ul class="list">
+        <li>
+          <dl>
+            <dt>10/10</dt>
+            <dd><a href="html/notice/test.html">[test配信]新型コロナウイルス感染症対策等について</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/8</dt>
+            <dd><a href="html/notice/test.html">[test配信]寮のWi-Fi改修に伴う寮内Wi-Fiの停止について</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/6</dt>
+            <dd><a href="html/notice/test.html">[test配信]高城寮ホームページのリニューアルについて</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/5</dt>
+            <dd><a href="html/notice/test.html">[test配信]お知らせが二行の場合のテストです。ああああああああああああああああああああああああああああああああああああ</a></dd>
+          </dl>
+        </li>
+        <li>
+          <dl>
+            <dt>10/4</dt>
+            <dd><a href="html/notice/test.html">[test配信]OverFlowの動作確認です！</a></dd>
+          </dl>
+        </li>
       </ul>
   </section>
+</div>
+  <div class="department">
+    <h2 class="title">寮の取り組み</h2>
+    <a href="html/studying.html"><h3><i class="fas fa-graduation-cap"></i> 学習面のサポート</h3></a>
+    <a href="html/env.html"><h3><i class="fas fa-broom"></i> 寮内環境の整備</h3></a>
+    <a href="html/meet.html"><h3><i class="fas fa-futbol"></i> 寮生同士の交流</h3></a>
+    <a href="html/safety.html"><h3><i class="fas fa-running"></i> 安全の確保</h3></a>
+    <a href="html/it.html"><h3><i class="fas fa-laptop-code"></i> 情報技術の活用</h3></a>
+  </div>
+  </div>
+  <div id="movie">
+    <h2><span>Short Movie</span></h2>
+    <video src="video/overView.mov" controls loop width="1000px"></video>
+  </div>
 
   <h2 id="links-title">LINKS</h2>
-  <div class="links">
+  <div id="links">
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/">徳山工業高等専門学校</a></p>
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/english/">Tokuyama College of Technology.</a></p>
     <p><a target="_blank" href="https://www.kosen-k.go.jp/">国立高等専門学校機構</a></p>
     <p><a target="_blank" href="http://www.soumu.go.jp/kanku/chugoku/chugoku_kikan.html">行政機関等ガイドブック</a></p>
   </div>
-  <div class="links">
-    <p><a target="_blank" href="https://www.facebook.com/tokuyamakousen/">徳山高専公式facebook</a></p>
-    <p><a target="_blank" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">徳山高専国際交流facebook</a></p>
+  <div id="links">
+    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" href="https://www.facebook.com/tokuyamakousen/">徳山高専公式facebook</a></p>
+    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">徳山高専国際交流facebook</a></p>
     <p><a target="_blank" href="https://www.bikita.jp/class/index.php?cl=0f2b47">徳山高専同窓会 高城会</a></p>
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/examsp/index.html">徳山高専 入試情報サイト</a></p>
   </div>
 
   <div class="footer">
     <img src="img/footer.png" height="75px">
-    <a href="html/site.html"><p id="site">このサイトについて</p></a>
+    <a href="html/site.html"><p><span id="site">このサイトについて</span></p></a>
     <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- jquery -->
+  <script type="text/javascript" src="script/jquery-3.5.1.min.js"></script> <!-- jquery -->
   <script src="script/index.js"></script> <!--JS取り込み-->
-  <script src="script/notice.js"></script> <!--JS取り込み-->
   <script src="script/slider.js"></script> <!--JS取り込み-->
+  <script src="script/common.js"></script> <!--JS取り込み-->
+  <link rel="stylesheet" href="style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--CSS(幅0px以上1450px以下)-->
   </body>
 </html>
