細かな修正

--- a/html/purpose.html
+++ b/html/purpose.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common-min.css" type="text/css" media="screen and (min-width:0px) and (max-width:1230px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1230px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
@@ -35,15 +35,24 @@
     </form>
   </div>
 
-  <div class="bar">
-    <li><a href="purpose.html">寮の目的 &gt;</a></li>
-    <li><a href="facility.html">施設,設備 &gt;</a></li>
-    <li><a href="event.html">寮生活 &gt;</a></li>
-    <li><a href="cost.html">学寮経費 &gt;</a></li>
-    <li><a href="parents.html">保護者の方へ &gt;</a></li>
-    <li><a href="examinee.html">受験生へ &gt;</a></li>
-    <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
-    <li><a href="contact.html">お問い合わせ &gt;</a></li>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
+        <li><a href="html/purpose.html">寮の目的 &gt;</a></li>
+        <li><a href="html/facility.html">施設,設備 &gt;</a></li>
+        <li><a href="html/event.html">寮生活 &gt;</a></li>
+        <li><a href="html/cost.html">学寮経費 &gt;</a></li>
+        <li><a href="html/parents.html">保護者の方へ &gt;</a></li>
+        <li><a href="html/examinee.html">受験生へ &gt;</a></li>
+        <li><a href="belonging/index.html">寮生用ページ &gt;</a></li>
+        <li><a href="html/contact.html">お問い合わせ &gt;</a></li>
+      </ul>
+    </nav>
   </div>
 
   <div class="contents">
