--- a/html/site.html
+++ b/html/site.html
@@ -44,14 +44,14 @@
     </p>
     <nav id="bar">
       <ul>
-        <li><a href="html/purpose.html">寮の目的 &gt;</a></li>
-        <li><a href="html/facility.html">施設,設備 &gt;</a></li>
-        <li><a href="html/event.html">寮生活 &gt;</a></li>
-        <li><a href="html/cost.html">学寮経費 &gt;</a></li>
-        <li><a href="html/parents.html">保護者の方へ &gt;</a></li>
-        <li><a href="html/examinee.html">受験生へ &gt;</a></li>
-        <li><a href="belonging/index.html">寮生用ページ &gt;</a></li>
-        <li><a href="html/contact.html">お問い合わせ &gt;</a></li>
+        <li><a href="purpose.html">寮の目的 &gt;</a></li>
+        <li><a href="facility.html">施設,設備 &gt;</a></li>
+        <li><a href="event.html">寮生活 &gt;</a></li>
+        <li><a href="cost.html">学寮経費 &gt;</a></li>
+        <li><a href="parents.html">保護者の方へ &gt;</a></li>
+        <li><a href="examinee.html">受験生へ &gt;</a></li>
+        <li><a href="../belonging/index.html">寮生用ページ &gt;</a></li>
+        <li><a href="contact.html">お問い合わせ &gt;</a></li>
       </ul>
     </nav>
   </div>
