テーブル編集と文章編集

--- a/html/cost.html
+++ b/html/cost.html
@@ -4,6 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
   <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -52,6 +53,39 @@
       </ul>
     </div>
   </div>
+
+  <div class="contents">
+    <table class="table table-striped">
+      <tbody class="text-center">
+        <tr>
+          <th scope="row">寄宿料</th>
+          <td>月額</td>
+          <td>700円</td>
+        </tr>
+        <tr>
+          <th scope="row">食費(1日3食)</th>
+          <td>月額</td>
+          <td>37,200円</td>
+        </tr>
+        <tr>
+          <th scope="row">寮費(光熱水費等)</th>
+          <td>月額</td>
+          <td>7,500円</td>
+        </tr>
+        <tr>
+          <th scope="row">入寮費</th>
+          <td>入寮時</td>
+          <td>1,000円</td>
+        </tr>
+        <tr>
+          <th scope="row">入寮生会費</th>
+          <td>年額</td>
+          <td>1,500円</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
   <div class="footer">
     <img src="../img/footer.png" height="70px">
     <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
