--- a/html/purpose.html
+++ b/html/purpose.html
@@ -82,7 +82,7 @@
         </div>
         <div style="padding:10px;">
           <h5>ⅲ.勉強・クラブ活動をするのに最適な場としての役割</h5>
-          　学寮では，勉強内容で理解できないところを先輩や同僚に直接聞くことができますので，寮生は平均して良い成績を取っています。
+          　学寮では，勉強内容で理解できないところを先輩や同級生に直接聞くことができますので，寮生は平均して良い成績を取っています。
           大学や専攻科に進学する学生が多いのも寮生の特徴です。また，通学に要する時間が５分程度と極端に短いため，
           この時間帯をクラブ活動に当てることができるなど，時間の有効利用が可能です。
         </div>
