表の挿入と新しいコンテンツを追加！

--- a/html/contact.html
+++ b/html/contact.html
@@ -53,7 +53,10 @@
   </div>
 
   <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
-  <p id="contact">学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>E-mail : ryoumu＠tokuyama.ac.jp</p>
+  <p id="contact">学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>
+    Email:<a href="mailto:ryoumu＠tokuyama.ac.jp?subject=問い合わせ">ryoumu＠tokuyama.ac.jp</a></p>
+
+  
 
   <div class="footer">
     <img src="../img/footer.png" height="70px">
