--- a/html/studying.html
+++ b/html/studying.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="../index.html"><img id="logo" src="../img/header.png" height="70px"></a>
+    <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/studying.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="location.html"><h3 class="access">アクセス</h3></a>
     <form action="result.html" class="search">
@@ -63,9 +63,9 @@
   </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
+    <img src="../img/footer.png">
     <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script src="../script/common.js"></script> <!--JS取り込み-->
