--- a/belonging/index.html
+++ b/belonging/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="../index.html"><img id="logo" src="../img/header.png" height="70px"></a>
+    <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/belonging/index.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="../html/location.html"><h3 class="access">アクセス</h3></a>
     <form action="../html/result.html" class="search">
@@ -43,12 +43,10 @@
     <nav id="bar">
       <ul>
       <form action="../html/result.html" class="search">
-      <li>
           <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
           <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-      </li>
       </form>
-      <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
+      <li><a href="../en/belonging/index.html"><h3 class="lang">ENGLISH</h3></a></li>
       <li><a href="../html/location.html"><h3 class="access">アクセス</h3></a></li>
       <li><a href="../html/purpose.html">寮の目的 &gt;</a></li>
       <li><a href="../html/facility.html">施設,設備 &gt;</a></li>
@@ -62,10 +60,19 @@
   </nav>
 </div>
 
+  <div class="main">
+    <h2>寮生用サイト一覧</h2>
+      <ul>
+        <a href="kondate.pdf"><li>寮の献立</li></a>
+        <a href=""><li>シー・アンド・シー ログインページ</li></a>
+        <a href=""><li>高城寮GitHub参加申込フォーム(学生のみ)</li></a>
+      </ul>
+  </div>
+
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
+    <img src="../img/footer.png">
     <a href="../html/site.html"><p><span id="site">このサイトについて</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
