--- a/en/event.html
+++ b/en/event.html
@@ -27,7 +27,7 @@
 <body>
 
   <div class="header">
-    <a href="index.html"><img id="logo" src="../img/header.png" height="70px"></a>
+    <a href="index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../html/event.html"><h3 class="lang">日本語</h3></a>
     <a href="location.html"><h3 class="access">Location</h3></a>
     <form action="result.html" class="search">
@@ -44,16 +44,14 @@
     <nav id="bar">
       <ul>
         <form action="result.html" class="search">
-        <li>
           <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
           <input id="search-buttom" class="fas" type="submit" value="search" method="get">
-        </li>
         </form>
-        <li><a href="../html/contact.html"><h3 class="lang">日本語</h3></a></li>
+        <li><a href="../html/event.html"><h3 class="lang">日本語</h3></a></li>
         <li><a href="location.html"><h3 class="access">Location</h3></a></li>
         <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
         <li><a href="facility.html">Facility &gt;</a></li>
-        <li><a href="event.html">Event &gt;</a></li>
+        <li><a href="event.html">Life and Event &gt;</a></li>
         <li><a href="cost.html">About cost &gt;</a></li>
         <li><a href="parents.html">For parents &gt;</a></li>
         <li><a href="examinee.html">For examinee &gt;</a></li>
@@ -63,9 +61,9 @@
     </nav>
   </div>
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
+    <img src="../img/footer.png">
     <a href="site.html"><p><span id="site">About this site</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
