--- a/en/index.html
+++ b/en/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
   <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
@@ -30,7 +29,7 @@
 <body>
   <div id="page_top"><a href="#"></a></div>
   <div class="header">
-    <a href="index.html"><img id="logo" src="../img/header.png" height="70px"></a>
+    <a href="index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../index.html"><h3 class="lang">日本語</h3></a>
     <a href="location.html"><h3 class="access">Location</h3></a>
     <form action="result.html" class="search">
@@ -47,16 +46,14 @@
     <nav id="bar">
       <ul>
         <form action="result.html" class="search">
-        <li>
           <input id="search-input" placeholder="Please enter the keyword" type="text" name="search-key">
           <input id="search-buttom" class="fas" type="submit" value="search" method="get">
-        </li>
         </form>
-        <li><a href="../html/contact.html"><h3 class="lang">日本語</h3></a></li>
+        <li><a href="../index.html"><h3 class="lang">日本語</h3></a></li>
         <li><a href="location.html"><h3 class="access">Location</h3></a></li>
         <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
         <li><a href="facility.html">Facility &gt;</a></li>
-        <li><a href="event.html">Event &gt;</a></li>
+        <li><a href="event.html">Life and Event &gt;</a></li>
         <li><a href="cost.html">About cost &gt;</a></li>
         <li><a href="parents.html">For parents &gt;</a></li>
         <li><a href="examinee.html">For examinee &gt;</a></li>
@@ -73,18 +70,19 @@
     <p id="arrow-prev" class="arrow">←</p>
     <p id="arrow-next" class="arrow">→</p>
   </div>
+
   <div class="pair">
 
     <div id="notice">
     <h2 id="notice-title">Recent Notice</h2>
     <section id="notice-inner">
-      <ul class="list">
+      <ul id="list">
       </ul>
   </section>
   </div>
   <div id="department">
     <h2 class="title">Dormitory's Endeavors</h2>
-    <a href="studying.html"><h3><i class="fas fa-graduation-cap"></i> Support for Studying</h3></a>
+    <a href="studying.html"><h3><i class="fas fa-graduation-cap"></i> Support Education</h3></a>
     <a href="env.html"><h3><i class="fas fa-broom"></i> Improve Enviroment</h3></a>
     <a href="meet.html"><h3><i class="fas fa-futbol"></i>  Exchange Event</h3></a>
     <a href="safety.html"><h3><i class="fas fa-running"></i> For Safety</h3></a>
@@ -93,26 +91,23 @@
   </div>
   <div id="movie">
     <h2><span>Short Movie</span></h2>
-    <video src="../video/overView.MP4" controls loop width="1000px"></video>
+    <iframe id="inner-video" src="https://www.youtube.com/embed/hRzDRFGEEw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+
+  <div id="links">
   <h2 id="links-title">LINKS</h2>
-  <div id="links">
+  <div class="links-inner">
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/english/">Tokuyama College of Technology.</a></p>
-    <p><a target="_blank" href="https://www.tokuyama.ac.jp/">徳山工業高等専門学校</a></p>
-    <p><a target="_blank" href="https://www.kosen-k.go.jp/">National Institute of Technology</a></p>
-    <p><a target="_blank" href="http://www.soumu.go.jp/kanku/chugoku/chugoku_kikan.html">Guide of Government Orginization</a></p>
-  </div>
-  <div id="links">
-    <p><a target="_blank" href="https://www.facebook.com/tokuyamakousen/">Official facebook</a></p>
-    <p><a target="_blank" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">International facebook</a></p>
-    <p><a target="_blank" href="https://www.bikita.jp/class/index.php?cl=0f2b47">TCT Alumni association,Takajo Kai</a></p>
+    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">International facebook</a></p>
+    <p><a target="_blank" href="https://www.bikita.jp/class/index.php?cl=0f2b47">TCT Alumni association,<br> Takajo Kai</a></p>
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/examsp/index.html">Exam Imformation site</a></p>
+  </div>
   </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
+    <img src="../img/footer.png">
     <a href="site.html"><p><span id="site">About this site</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
