--- a/html/env.html
+++ b/html/env.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="../index.html"><img id="logo" src="../img/header.png" height="70px"></a>
+    <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/env.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="location.html"><h3 class="access">アクセス</h3></a>
     <form action="result.html" class="search">
@@ -43,10 +43,8 @@
     <nav id="bar">
       <ul>
         <form action="result.html" class="search">
-        <li>
-            <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-            <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </li>
+          <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
+          <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
         </form>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="location.html"><h3 class="access">アクセス</h3></a></li>
@@ -62,12 +60,14 @@
     </nav>
   </div>
 
-
+  <div id="developing">
+    <p>このページは現在開発中です。</p>
+  </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
+    <img src="../img/footer.png">
     <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
