--- a/html/location.html
+++ b/html/location.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:950px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:950px) and (max-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/locationMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1450px)"> <!--アクセスサイト用CSS-->
   <link rel="stylesheet" href="../style/location.css" type="text/css" media="screen and (min-width:1450px)"> <!--アクセスサイト用CSS-->
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="../index.html"><img id="logo" src="../img/header.png" height="70px"></a>
+    <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/location.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="location.html"><h3 class="access">アクセス</h3></a>
     <form action="result.html" class="search">
@@ -45,10 +45,8 @@
     <nav id="bar">
       <ul>
         <form action="result.html" class="search">
-        <li>
             <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
             <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </li>
         </form>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="location.html"><h3 class="access">アクセス</h3></a></li>
@@ -67,9 +65,9 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.6527980452624!2d131.84742641564495!3d34.05277638060586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3544e0c9c1b77aa9%3A0xcef289fe15db68a5!2z5b6z5bGx5bel5qWt6auY562J5bCC6ZaA5a2m5qChIOmrmOWfjuWvrg!5e0!3m2!1sja!2sjp!4v1601156582820!5m2!1sja!2sjp" height="650" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" id="map"></iframe>
   <p id="address">学寮連絡先<br>〒745-8585　山口県周南市学園台<br>TEL&FAX　0834-29-6236</p>
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
+    <img src="../img/footer.png">
     <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
