--- a/html/notice/20201023-1.html
+++ b/html/notice/20201023-1.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../../style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../../style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="../../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fwesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
@@ -13,21 +13,23 @@
   <meta charset="utf-8"> <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>お知らせ | 高城寮</title> <!--タイトル-->
+  
+  <title>寮内Wi-Fiのアップデートについて | 高城寮</title> <!--タイトル-->
+  <meta property="og:title" content="寮内Wi-Fiのアップデートについて | 高城寮"/> <!--タイトル-->
+  <meta property="og:site_name" content="寮内Wi-Fiのアップデートについて | 高城寮" /> <!--タイトル-->
+  
   <meta name="description" content="高城寮公式ホームページです。"> <!--簡易説明-->
   <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
-  <meta property="og:title" content="お問い合わせ | 高城寮"/> <!--タイトル-->
   <meta property="og:type" content="website">
   <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" /> <!--サイトアイコンURL-->
+  <meta property="og:image" content="https://www.tokuyama.ac.jp/dormitory/img/icon.png" /> <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
-  <meta property="og:site_name" content="お問い合わせ | 高城寮" /> <!--タイトル-->
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
 <body>
 
   <div class="header">
-    <a href="../../index.html"><img id="logo" src="../../img/header.png" height="70px"></a>
+    <a href="../../index.html"><img id="logo" src="../../img/header.png"></a>
     <a href="../../en/contact.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="../location.html"><h3 class="access">アクセス</h3></a>
     <form action="result.html" class="search">
@@ -44,10 +46,8 @@
     <nav id="bar">
       <ul>
         <form action="result.html" class="search">
-        <li>
-            <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
-            <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </li>
+          <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
+          <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
         </form>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="location.html"><h3 class="access">アクセス</h3></a></li>
@@ -58,7 +58,7 @@
         <li><a href="../parents.html">保護者の方へ &gt;</a></li>
         <li><a href="../examinee.html">受験生へ &gt;</a></li>
         <li><a href="../../belonging/index.html">寮生用ページ &gt;</a></li>
-        <li><a href="../contact.html">お問い合わせ &gt;</a></li>
+        <li><a href="../contact.html">寮内Wi-Fiのアップデートについて &gt;</a></li>
       </ul>
     </nav>
   </div>
@@ -68,9 +68,9 @@
   </div>
 
   <div class="footer">
-    <img src="../../img/footer.png" height="70px">
+    <img src="../../img/footer.png">
     <a href="../site.html"><p><span id="site">このサイトについて</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
