--- a/html/parents.html
+++ b/html/parents.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="../index.html"><img id="logo" src="../img/header.png" height="70px"></a>
+    <a href="../index.html"><img id="logo" src="../img/header.png"></a>
     <a href="../en/parents.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="location.html"><h3 class="access">アクセス</h3></a>
     <form action="result.html" class="search">
@@ -43,10 +43,8 @@
     <nav id="bar">
       <ul>
         <form action="result.html" class="search">
-        <li>
             <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
             <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </li>
         </form>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="location.html"><h3 class="access">アクセス</h3></a></li>
@@ -63,9 +61,9 @@
   </div>
 
   <div class="footer">
-    <img src="../img/footer.png" height="70px">
+    <img src="../img/footer.png">
     <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
