--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--index用CSS-->
-  <link rel="stylesheet" href="style/indexMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--index用CSS-->
-  <link rel="stylesheet" href="style/index.css" type="text/css" media="screen and (min-width:1450px)"> <!--index用CSS-->
-  <link rel="stylesheet" href="style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:850px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="style/commonMid.css" type="text/css" media="screen and (min-width:850px) and (max-width:1450px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="style/common.css" type="text/css" media="screen and (min-width:1450px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--index用CSS-->
+  <link rel="stylesheet" href="style/indexMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--index用CSS-->
+  <link rel="stylesheet" href="style/index.css" type="text/css" media="screen and (min-width:1270px)"> <!--index用CSS-->
+  <link rel="stylesheet" href="style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
+  <link rel="stylesheet" href="style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../style/bootstrap.min.css"> <!--bootstrap css　読み込み-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
@@ -30,7 +30,7 @@
 <body>
   <div id="page_top"><a href="#"></a></div>
   <div class="header">
-    <a href=""><img id="logo" src="img/header.png" height="70px"></a>
+    <a href=""><img id="logo" src="img/header.png"></a>
     <a href="en/index.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="html/location.html"><h3 class="access">アクセス</h3></a>
     <form action="html/result.html" class="search">
@@ -47,10 +47,8 @@
     <nav id="bar">
       <ul>
         <form action="html/result.html" class="search">
-        <li>
             <input id="search-input" placeholder="キーワードを入力" type="text" name="search-key">
             <input id="search-buttom" class="fas" type="submit" value="検索" method="get">
-        </li>
         </form>
         <li><a href="en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
         <li><a href="html/location.html"><h3 class="access">アクセス</h3></a></li>
@@ -79,12 +77,12 @@
     <div id="notice">
     <h2 id="notice-title">お知らせ</h2>
     <section id="notice-inner">
-      <ul class="list">
+      <ul id="list">
       </ul>
   </section>
 </div>
   <div id="department">
-    <h2 class="title">寮の取り組み</h2>
+    <h2><span class="title">寮の取り組み</span></h2>
     <a href="html/studying.html"><h3><i class="fas fa-graduation-cap"></i> 学習面のサポート</h3></a>
     <a href="html/env.html"><h3><i class="fas fa-broom"></i> 寮内環境の整備</h3></a>
     <a href="html/meet.html"><h3><i class="fas fa-futbol"></i> 寮生同士の交流</h3></a>
@@ -94,28 +92,22 @@
   </div>
   <div id="movie">
     <h2><span>Short Movie</span></h2>
-    <video src="video/overView.MP4" controls loop></video>
+    <iframe id="inner-video" src="https://www.youtube.com/embed/hRzDRFGEEw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div id="links">
   <h2 id="links-title">LINKS</h2>
   <div class="links-inner">
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/">徳山工業高等専門学校</a></p>
-    <p><a target="_blank" href="https://www.tokuyama.ac.jp/english/">Tokuyama College of Technology.</a></p>
-    <p><a target="_blank" href="https://www.kosen-k.go.jp/">国立高等専門学校機構</a></p>
-    <p><a target="_blank" href="http://www.soumu.go.jp/kanku/chugoku/chugoku_kikan.html">行政機関等ガイドブック</a></p>
-  </div>
-  <div class="links-inner">
-    <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" href="https://www.facebook.com/tokuyamakousen/">徳山高専公式facebook</a></p>
     <p><i class="fab fa-2x fa-facebook-square"></i><a target="_blank" href="https://www.facebook.com/%E5%BE%B3%E5%B1%B1%E9%AB%98%E5%B0%82%E5%9B%BD%E9%9A%9B%E4%BA%A4%E6%B5%81%E3%83%9A%E3%83%BC%E3%82%B8-1008019312619280/">徳山高専国際交流facebook</a></p>
     <p><a target="_blank" href="https://www.bikita.jp/class/index.php?cl=0f2b47">徳山高専同窓会 高城会</a></p>
     <p><a target="_blank" href="https://www.tokuyama.ac.jp/examsp/index.html">徳山高専 入試情報サイト</a></p>
   </div>
   </div>
   <div class="footer">
-    <img src="img/footer.png" height="75px">
+    <img src="img/footer.png">
     <a href="html/site.html"><p><span id="site">このサイトについて</span></p></a>
-    <p id="copyright">Copyright © 2020 TakajoDormitory All Rights Reserved.</p>
+    <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="script/jquery-3.5.1.min.js"></script> <!-- jquery -->
