--- a/en/belonging/index.html
+++ b/en/belonging/index.html
@@ -59,7 +59,14 @@
       </ul>
     </nav>
   </div>
-
+  <div class="list">
+    <ul>
+      <h2>Site for dormitory students</h2>
+      <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf"><li>Dormitory Meals Menu</li></a>
+      <a target="_blank" rel="noopener noreferrer" href="https://web.obentoedi.com/Magic31Scripts/MGrqispi.dll?APPNAME=SYS07TOKU&PRGNAME=pso_p_logon&ARGUMENTS=-N0,-A7gzhv4sf3e10qpb9cyji#prepage2"><li>Manage system of dormitory meals</li></a>
+      <a target="_blank" rel="noopener noreferrer" href="https://forms.office.com/Pages/ResponsePage.aspx?id=XYP-cpVeEkWK4KezivJfyJYZKS5tU_5OjDR63Mlm_KNUQzlURENaRFpRQ1dVNjlRVzFHRzE3TFk2Ny4u"><li>GitHub for dormitory student</li></a>
+    </ul>
+</div>
   
   <div class="footer">
     <img src="../../img/footer.png">
