--- a/belonging/index.html
+++ b/belonging/index.html
@@ -60,7 +60,7 @@
   </nav>
 </div>
 
-  <div id="list">
+  <div class="list">
       <ul>
         <h2>寮生用サイト一覧</h2>
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf"><li>寮の献立</li></a>
