--- a/en/contact.html
+++ b/en/contact.html
@@ -30,7 +30,7 @@
     <a href="../html/contact.html"><h3 class="lang">日本語</h3></a>
     <a href="location.html"><h3 class="access">Location</h3></a>
     <div class="search">
-      <script async src="../script/search.js"></script>
+      <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
       <div class="gcse-search"></div>
     </div>
   </div>
@@ -43,7 +43,7 @@
     <nav id="bar">
       <ul>
         <div class="search">
-          <script async src="../script/search.js"></script>
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
         <li><a href="../html/contact.html"><h3 class="lang">日本語</h3></a></li>
