--- a/html/env.html
+++ b/html/env.html
@@ -30,7 +30,7 @@
     <a href="../en/env.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="location.html"><h3 class="access">アクセス</h3></a>
     <div class="search">
-      <script async src="../script/search.js"></script>
+      <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
       <div class="gcse-search"></div>
     </div>
   </div>
