--- a/en/parents.html
+++ b/en/parents.html
@@ -31,7 +31,7 @@
     <a href="../html/parents.html"><h3 class="lang">日本語</h3></a>
     <a href="location.html"><h3 class="access">Location</h3></a>
     <div class="search">
-      <script async src="../script/search.js"></script>
+      <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
       <div class="gcse-search"></div>
     </div>
   </div>
@@ -44,7 +44,7 @@
     <nav id="bar">
       <ul>
         <div class="search">
-          <script async src="../script/search.js"></script>
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
         <li><a href="../html/parents.html"><h3 class="lang">日本語</h3></a></li>
