--- a/html/notice/20201022-1.html
+++ b/html/notice/20201022-1.html
@@ -10,6 +10,7 @@
   <meta property="og:title" content="寮のホームページのリニューアルについて | 高城寮"/> <!--タイトル-->
 
   
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
   <link rel="stylesheet" href="../../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
   <link rel="stylesheet" href="../../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
@@ -37,8 +38,9 @@
     <a href="../../en/contact.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="../location.html"><h3 class="access">アクセス</h3></a>
     <div class="search">
-      <script async src="../../script/search.js"></script>
+      <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
       <div class="gcse-search"></div>
+
     </div>
   </div>
   <div id="wrapper">
@@ -50,7 +52,7 @@
     <nav id="bar">
       <ul>
         <div class="search">
-          <script async src="../../script/search.js"></script>
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
@@ -69,7 +71,7 @@
 
 <!-- mainの中に内容を記述 -->
   <div class="main">
-    <h3>2020/10/22</h3>
+    <h3></h3>
     <h2>寮のホームページのリニューアルについて</h2>
     <p>高城寮公式ホームページ(当サイト)がリニューアルしました！<br>デザインが一新したほか、キーワード検索機能、コンテンツの増加、寮生用ページの追加などが行われました。</p>
 
