--- a/html/notice/20201023-1.html
+++ b/html/notice/20201023-1.html
@@ -50,7 +50,7 @@
     <nav id="bar">
       <ul>
         <div class="search">
-          <script async src="../../script/search.js"></script>
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
           <div class="gcse-search"></div>
         </div>
         <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
