要望通りに修正

--- a/belonging/index.html
+++ b/belonging/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="../index.html"><img id="logo" src="../img/header.png"></a>
+    <a href="../index.html"><img id="logo" src="E:\HomePage_img/header.png"></a>
     <a href="../en/belonging/index.html"><h3 class="lang">ENGLISH</h3></a>
     <a href="../html/location.html"><h3 class="access">アクセス</h3></a>
     <div class="search">
@@ -52,8 +52,6 @@
       <li><a href="../html/facility.html">施設,設備 &gt;</a></li>
       <li><a href="../html/event.html">寮生活 &gt;</a></li>
       <li><a href="../html/cost.html">学寮経費 &gt;</a></li>
-      <li><a href="../html/parents.html">保護者の方へ &gt;</a></li>
-      <li><a href="../html/examinee.html">受験生へ &gt;</a></li>
       <li><a href="../html/../belonging/index.html">寮生用ページ &gt;</a></li>
       <li><a href="../html/contact.html">お問い合わせ &gt;</a></li>
     </ul>
@@ -69,7 +67,7 @@
       </ul>
   </div>
   <div class="footer">
-    <img src="../img/footer.png">
+    <img src="E:\HomePage_img/footer.png">
     <a href="../html/site.html"><p><span id="site">このサイトについて</span></p></a>
     <p id="copyright">© 2020 TakajoDormitory All Rights Reserved.</p>
   </div>
