--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
         <li><a href="html/facility.html">施設,設備 &gt;</a></li>
         <li><a href="html/event.html">寮生活 &gt;</a></li>
         <li><a href="html/cost.html">学寮経費 &gt;</a></li>
-        <li><a href="html/parents.html">保護者の方へ &gt;</a></li>
-        <li><a href="html/examinee.html">受験生へ &gt;</a></li>
         <li><a href="belonging/index.html">寮生用ページ &gt;</a></li>
         <li><a href="html/contact.html">お問い合わせ &gt;</a></li>
       </ul>
@@ -78,7 +76,7 @@
     <h2 id="notice-title">お知らせ</h2>
     <section id="notice-inner">
       <ul id="list">
-      </ul>
+      <li><dl><dt>2020/10/23</dt><dd><a href="html/notice/20201023-1.html">寮内Wi-Fiが新しくなりました！</a></dd></dl></li><li><dl><dt>2020/10/22</dt><dd><a href="html/notice/20201022-1.html">寮のホームページをアップデートしました！</a></dd></dl></li></ul>
   </section>
 </div>
   <div id="department">
