add LINE button

--- a/html/notice/20201023-1.html
+++ b/html/notice/20201023-1.html
@@ -82,6 +82,9 @@
       <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
       <div id="fb-root"></div>
     </div>
+    <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-url="https://social-plugins.line.me/ja/how_to_install#lineitbutton" data-color="default" data-size="small" data-count="true" style="display: none;"></div>
+      <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
+    </div>
   </div>
 
 
