--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <a href="html/it.html"><h3><i class="fas fa-laptop-code"></i> 情報技術の活用</h3></a>
   </div>
   </div>
+  
   <div id="movie">
     <h2><span>Short Movie</span></h2>
     <iframe id="inner-video" src="https://www.youtube.com/embed/hRzDRFGEEw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -101,7 +102,11 @@
     <p><a target="_blank" rel="noopener noreferrer" href="https://www.bikita.jp/class/index.php?cl=0f2b47">徳山高専同窓会 高城会</a></p>
     <p><a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/examsp/index.html">徳山高専 入試情報サイト</a></p>
   </div>
+
+  <div id="sns">
+  <a class="twitter-timeline" data-width="500" data-height="600" data-theme="light" href="https://twitter.com/c19yamamoto?ref_src=twsrc%5Etfw">Tweets by c19yamamoto</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
+
   <div class="footer">
     <img src="img/footer.png">
     <a href="html/site.html"><p><span id="site">このサイトについて</span></p></a>
