fix line button

--- a/html/notice/20201023-1.html
+++ b/html/notice/20201023-1.html
@@ -28,6 +28,7 @@
   <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
   <meta property="og:image" content="https://www.tokuyama.ac.jp/dormitory/img/icon.png" /> <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
+  <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
 <body>
@@ -82,8 +83,8 @@
       <div class="fb-like" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
       <div id="fb-root"></div>
     </div>
-    <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-url="https://social-plugins.line.me/ja/how_to_install#lineitbutton" data-color="default" data-size="small" data-count="true" style="display: none;"></div>
-      <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
+    <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-color="default" data-size="small" data-count="true" style="display: none;"></div>
+    <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
     </div>
   </div>
 
