add twitter:site meta

--- a/en/site.html
+++ b/en/site.html
@@ -21,7 +21,7 @@
   <meta property="og:description" content="寮公式ホームページです。" /> <!--簡易説明-->
   <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" /> <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="TwitterID"/> <!--Twitter情報-->
+  <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="About this site | Takajo dormitory" /> <!--タイトル-->
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
