--- a/html/contact.html
+++ b/html/contact.html
@@ -24,6 +24,7 @@
   <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
   <meta property="og:image" content="https://www.tokuyama.ac.jp/dormitory/img/icon.png" /> <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
+  <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
 <body>
