--- a/en/location.html
+++ b/en/location.html
@@ -23,6 +23,7 @@
   <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
   <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" /> <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
+  <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:site_name" content="Location | Takajo dormitory" /> <!--タイトル-->
   <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
 </head>
