--- a/en/studying.html
+++ b/en/studying.html
@@ -48,12 +48,12 @@
       </div>
       <li><a href="../index.html"><h3 class="lang">日本語</h3></a></li>
       <li><a href="location.html"><h3 class="access">Location</h3></a></li>
-      <li><a href="purpose.html">Purpose of dormitory &gt;</a></li>
-      <li><a href="facility.html">Facility &gt;</a></li>
-      <li><a href="event.html">Life and Event &gt;</a></li>
-      <li><a href="cost.html">About cost &gt;</a></li>
-      <li><a href="belonging/index.html">For Dormitory students &gt;</a></li>
-      <li><a href="contact.html">Contact us &gt;</a></li>
+      <li><a href="purpose.html">Purpose of dormitory</a></li>
+      <li><a href="facility.html">Facility</a></li>
+      <li><a href="event.html">Life and Event</a></li>
+      <li><a href="cost.html">About cost</a></li>
+      <li><a href="belonging/index.html">For Dormitory students</a></li>
+      <li><a href="contact.html">Contact us</a></li>
     </ul>
   </nav>
 </div>
