--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
           <div class="gcse-search"></div>
         </div>
         <li><a href="en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
-        <li><a href="html/purpose.html">寮の目的 &gt;</a></li>
-        <li><a href="html/facility.html">施設,設備 &gt;</a></li>
-        <li><a href="html/event.html">寮生活 &gt;</a></li>
-        <li><a href="html/cost.html">学寮経費 &gt;</a></li>
-        <li><a href="belonging/index.html">寮生用ページ &gt;</a></li>
-        <li><a href="html/contact.html">お問い合わせ &gt;</a></li>
+        <li><a href="html/purpose.html">寮の目的</a></li>
+        <li><a href="html/facility.html">施設,設備</a></li>
+        <li><a href="html/event.html">寮生活</a></li>
+        <li><a href="html/cost.html">学寮経費</a></li>
+        <li><a href="belonging/index.html">寮生用ページ</a></li>
+        <li><a href="html/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
   </div>
