--- a/belonging/index.html
+++ b/belonging/index.html
@@ -28,7 +28,7 @@
 <body>
   <!--header-->
   <header id="header">
-    <a href="index.html"><h1 id="title">Takajo Dormitory</h1></a>
+    <a href="../index.html"><h1 id="title">Takajo Dormitory</h1></a>
     <a href="en/index.html"><h1 id="lang">ENGLISH</h3></a>
     <a href="html/location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
