--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,7 @@
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
     <div id="video-origin">
-      <video id="video" src="../img/OverView.mp4" type="video/mp4" poster="../img/OverView.jpg" webkit-playsinline playsinline muted autoplay loop></video>
+      <video id="video" src="../video/OverView.mp4" type="video/mp4" poster="../img/OverViewSky.jpg" webkit-playsinline playsinline muted autoplay loop></video>
     </div>
   </div>
   <div id="wrapper">
@@ -98,7 +98,7 @@
 
   <div id="movie">
     <h2><span>Short Movie</span></h2>
-    <iframe id="inner-video" src="https://www.youtube.com/embed/hRzDRFGEEw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="inner-video" src="https://www.youtube.com/embed/RhxgednKg8Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div id="links">
