--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
   </header>
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
-    <div id="video-origin">
-      <video id="video" src="img/OverView.mp4" type="video/mp4" poster="img/OverView.jpg" webkit-playsinline playsinline muted autoplay loop></video>
-    </div>
+    <video id="video" src="video/OverView.mp4" type="video/mp4" poster="img/OverViewSky.jpg" webkit-playsinline playsinline muted autoplay loop></video>
   </div>
   
   <div id="wrapper">
@@ -100,7 +98,7 @@
 
   <div id="movie">
     <h2><span>Short Movie</span></h2>
-    <iframe id="inner-video" src="https://www.youtube.com/embed/hRzDRFGEEw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="inner-video" src="https://www.youtube.com/embed/RhxgednKg8Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <div id="links">
@@ -110,6 +108,7 @@
       <p><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/takajodormitory/"><i class="fab fa-instagram fa-lg"></i>高城寮Instagram</a></p>
     </div>
     <a class="twitter-timeline" data-width="500" data-height="700" href="https://twitter.com/TakajoDormitory?ref_src=twsrc%5Etfw">Tweets by TakajoDormitory</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
   </div>
 
   <!--footer-->
