Re-scale images

--- a/html/facility.html
+++ b/html/facility.html
@@ -58,7 +58,12 @@
 </div>
   <!--container-->
   <div id="container">
-
+    <img widht="500px" src="../img/Facility/SingleRoom.jpg" alt="一人部屋の画像">
+    <img widht="500px" src="../img/Facility/DoubleRoom.jpg" alt="二 人部屋の画像">
+    <img widht="500px" src="../img/Facility/KitchenSpace.jpg" alt="キッチンスペースの画像">
+    <img widht="500px" src="../img/Facility/LearningRoom.jpg" alt="ラーニングスペースの画像">
+    <img widht="500px" src="../img/Facility/ShowerRoom.jpg" alt="シャワー室の画像">
+    <img widht="500px" src="../img/Facility/Bath.jpg" alt="浴室の画像">
   </div>
 
   <!--footer-->
