--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,7 @@
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
     <div id="video-origin">
-      <video id="video" src="../video/OverView.mp4" type="video/mp4" poster="../img/OverViewSky.jpg" webkit-playsinline playsinline muted autoplay loop></video>
+      <video id="video" src="../video/OverView.mp4" type="video/mp4" poster="../img/OverViewSky.JPG" webkit-playsinline playsinline muted autoplay loop></video>
     </div>
   </div>
   <div id="wrapper">
