--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </header>
   <div id="video-area">
     <h1>WELCOME TO TAKAJO</h1>
-    <video id="video" poster="img/OverViewSky.JPG" webkit-playsinline playsinline muted autoplay loop preload="auto">
-      <source src="video/OverView.mp4" type="video/mp4">
+    <video id="video" poster="img/OverViewSky.JPG" playsinline muted autoplay loop preload="auto">
+      <source src="video/overView.MP4" type="video/mp4">
     </video>
   </div>
   
