--- a/html/purpose.html
+++ b/html/purpose.html
@@ -1,117 +1,151 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
+  <!--Googleフォント-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css"
+    media="screen and (min-width:0px) and (max-width:870px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css"
+    media="screen and (min-width:870px) and (max-width:1270px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)">
+  <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" /> <!--Apple用サイトアイコン-->
-  <meta charset="utf-8"> <!--文字セット-->
+  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <!--サイトアイコン-->
+  <link rel="icon" href="../Img/icon.png" sizes="192x192" />
+  <!--サイトアイコン-->
+  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <!--Apple用サイトアイコン-->
+  <meta charset="utf-8">
+  <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>寮の目的 | 高城寮</title> <!--タイトル-->
-  <meta name="description" content="高城寮公式ホームページです。"> <!--簡易説明-->
-  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
-  <meta property="og:title" content="寮の目的 | 高城寮"/> <!--タイトル-->
+  <title>寮の目的 | 高城寮</title>
+  <!--タイトル-->
+  <meta name="description" content="高城寮公式ホームページです。">
+  <!--簡易説明-->
+  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
+  <!--URL指定-->
+  <meta property="og:title" content="寮の目的 | 高城寮" />
+  <!--タイトル-->
   <meta property="og:type" content="website">
-  <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" /> <!--サイトアイコンURL-->
+  <meta property="og:description" content="高城寮公式ホームページです。" />
+  <!--簡易説明-->
+  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" />
+  <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
-  <meta property="og:site_name" content="寮の目的 | 高城寮" /> <!--タイトル-->
-  <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
+  <meta property="og:site_name" content="寮の目的 | 高城寮" />
+  <!--タイトル-->
+  <meta property="og:locale" content="ja_JP" />
+  <!--言語設定-->
 </head>
+
 <body>
   <!--header-->
   <header id="header">
-    <a href="../index.html"><h1 id="title">Takajo Dormitory</h1></a>
-    <a href="../en/index.html"><h1 id="lang">ENGLISH</h3></a>
+    <a href="../index.html">
+      <h1 id="title">Takajo Dormitory</h1>
+    </a>
+    <a href="../en/index.html">
+      <h1 id="lang">ENGLISH</h1>
+    </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
-</header>
+  </header>
 
-<div id="wrapper">
-  <p class="btn-gnavi">
-    <span></span>
-    <span></span>
-    <span></span>
-  </p>
-  <nav id="bar">
-    <ul>
-      <div class="search">
-        <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
-        <div class="gcse-search"></div>
-      </div>
-      <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
-      <li><a href="purpose.html">寮の目的</a></li>
-      <li><a href="facility.html">施設,設備</a></li>
-      <li><a href="event.html">寮生活</a></li>
-      <li><a href="cost.html">学寮経費</a></li>
-      <li><a href="../belonging/index.html">寮生用ページ</a></li>
-      <li><a href="contact.html">お問い合わせ</a></li>
-    </ul>
-  </nav>
-</div>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
+        <div class="search">
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
+          <div class="gcse-search"></div>
+        </div>
+        <li><a href="../en/index.html">
+            <h3 class="lang">ENGLISH</h3>
+          </a></li>
+        <li><a href="purpose.html">寮の目的</a></li>
+        <li><a href="facility.html">施設,設備</a></li>
+        <li><a href="event.html">寮生活</a></li>
+        <li><a href="cost.html">学寮経費</a></li>
+        <li><a href="../belonging/index.html">寮生用ページ</a></li>
+        <li><a href="contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </div>
   <!--container-->
   <div id="container">
-      <div class="row">
-        <div class="col"> <!--左側-->
-          <h4>目的</h4>
-          <div class="border-top" style="padding:10px;"> <!--上ボーダー -->
-            　学生の修学に便宜を供与し、かつ、その人間形成を助長して、教育目標の達成に資することを目的としています。
-            なお、入寮者の選考は、上記の目的に沿って行われます。従って、修学のための便宜の必要性が選考会議で審査されますが、
-            近郊の学生であっても定員の状況や修学意欲に応じて、積極的に受け入れ致します。 
-          </div>
-          <br>
-          <h4>教育寮としての役割</h4>
-          <div class="border-top" style="padding:10px;">
-            <h5>ⅰ.人間形成の場としての役割</h5>
-              下は本科１年生から上は専攻科生までと，多くの仲間が同じ寮で生活を送ります。自分が１年生に入れば４学年の先輩がいますし，
-            自分が５年生になれば４学年の後輩がいることになり，これは先輩，後輩を知る上で本当の素晴らしことだと思います。<br>
-            　また、このような環境の中で生活をすることによって，「全寮生（特に同室者）との協調性」，「寮生活および学校生活に対する責任感」，
-            「寮生活における忍耐力」，「寮内，学内，社会の規則を守る気持ち」，そして「他人への思いやり」などが身に付き，
-            それらは実社会に出たときに大いに役立ちます。
-          </div>
-          <div style="padding:10px;">
-            <h5>ⅱ.挨拶などの訓練の場の役割</h5>
-              一般社会人でもなかなか実行できない挨拶ができるようになったり，はっきりと話ができるようになったり，また積極的に行動することが
-            できるようになります。寮を離れても，これらがきちんとできる習慣が身に付きます。
-          </div>
-          <div style="padding:10px;">
-            <h5>ⅲ.勉強・クラブ活動をするのに最適な場としての役割</h5>
-            　学寮では，勉強内容で理解できないところを先輩や同級生に直接聞くことができますので，寮生は平均して良い成績を取っています。
-            大学や専攻科に進学する学生が多いのも寮生の特徴です。また，通学に要する時間が５分程度と極端に短いため，
-            この時間帯をクラブ活動に当てることができるなど，時間の有効利用が可能です。
-          </div>
+    <div class="row">
+      <div class="col">
+        <!--左側-->
+        <h4>目的</h4>
+        <div class="border-top" style="padding:10px;">
+          <!--上ボーダー -->
+          　学生の修学に便宜を供与し、かつ、その人間形成を助長して、教育目標の達成に資することを目的としています。
+          なお、入寮者の選考は、上記の目的に沿って行われます。従って、修学のための便宜の必要性が選考会議で審査されますが、
+          近郊の学生であっても定員の状況や修学意欲に応じて、積極的に受け入れ致します。
         </div>
-        <div class="col"> <!--右側-->
-          <h4>高城寮の状況</h4>
-          <div class="border-top" style="padding:10px;"> <!--上ボーダー -->
-            　学寮の定員は男子寮１２０名，女子寮３１名，計１５１名です。この中には外国人留学生もいます。<br>
-            　学寮には全寮生で構成する寮生会があり，この組織は学校の指導のもとに日常生活の具体的事項を自主的に運営するものです。
-            寮内には団体生活をするためにたくさんの規則があり，それらを遵守するよう全寮生に働きかけたり，親睦または触れ合いのための年間行事を企画，
-            実行したり，さらには自分達の生活の中で改善すべきところがあればみんなで検討し，それを要望したりします。寮生会は小さな組織ですが，
-            そこには役員会があり各部会などの色々な機能が付随しており，多くの寮生が何らかの形で参画しながら，楽しくて安全な寮の形成に携わっています。
-            また１年生には指導寮生が配置されており，指導および相談にあたります。
-          </div>
-          <br>
-          <!--追加項目はここより下に-->
-
+        <br>
+        <h4>教育寮としての役割</h4>
+        <div class="border-top" style="padding:10px;">
+          <h5>ⅰ.人間形成の場としての役割</h5>
+          下は本科１年生から上は専攻科生までと，多くの仲間が同じ寮で生活を送ります。自分が１年生に入れば４学年の先輩がいますし，
+          自分が５年生になれば４学年の後輩がいることになり，これは先輩，後輩を知る上で本当の素晴らしことだと思います。<br>
+          　また、このような環境の中で生活をすることによって，「全寮生（特に同室者）との協調性」，「寮生活および学校生活に対する責任感」，
+          「寮生活における忍耐力」，「寮内，学内，社会の規則を守る気持ち」，そして「他人への思いやり」などが身に付き，
+          それらは実社会に出たときに大いに役立ちます。
+        </div>
+        <div style="padding:10px;">
+          <h5>ⅱ.挨拶などの訓練の場の役割</h5>
+          一般社会人でもなかなか実行できない挨拶ができるようになったり，はっきりと話ができるようになったり，また積極的に行動することが
+          できるようになります。寮を離れても，これらがきちんとできる習慣が身に付きます。
+        </div>
+        <div style="padding:10px;">
+          <h5>ⅲ.勉強・クラブ活動をするのに最適な場としての役割</h5>
+          　学寮では，勉強内容で理解できないところを先輩や同級生に直接聞くことができますので，寮生は平均して良い成績を取っています。
+          大学や専攻科に進学する学生が多いのも寮生の特徴です。また，通学に要する時間が５分程度と極端に短いため，
+          この時間帯をクラブ活動に当てることができるなど，時間の有効利用が可能です。
         </div>
       </div>
+      <div class="col">
+        <!--右側-->
+        <h4>高城寮の状況</h4>
+        <div class="border-top" style="padding:10px;">
+          <!--上ボーダー -->
+          　学寮の定員は男子寮１２０名，女子寮３１名，計１５１名です。この中には外国人留学生もいます。<br>
+          　学寮には全寮生で構成する寮生会があり，この組織は学校の指導のもとに日常生活の具体的事項を自主的に運営するものです。
+          寮内には団体生活をするためにたくさんの規則があり，それらを遵守するよう全寮生に働きかけたり，親睦または触れ合いのための年間行事を企画，
+          実行したり，さらには自分達の生活の中で改善すべきところがあればみんなで検討し，それを要望したりします。寮生会は小さな組織ですが，
+          そこには役員会があり各部会などの色々な機能が付随しており，多くの寮生が何らかの形で参画しながら，楽しくて安全な寮の形成に携わっています。
+          また１年生には指導寮生が配置されており，指導および相談にあたります。
+        </div>
+        <br>
+        <!--追加項目はここより下に-->
+
+      </div>
     </div>
+  </div>
 
   <!--footer-->
   <div class="footer">
     <img src="../img/footer.png">
-    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
+    <a href="site.html">
+      <p><span id="site">このサイトについて</span></p>
+    </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script> <!--JS取り込み-->
-  </body>
+  <script src="../script/common.js"></script>
+  <!--JS取り込み-->
+</body>
+
 </html>
