--- a/html/contact.html
+++ b/html/contact.html
@@ -1,81 +1,111 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
+  <!--Googleフォント-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css"
+    media="screen and (min-width:0px) and (max-width:870px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css"
+    media="screen and (min-width:870px) and (max-width:1270px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)">
+  <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
-  <link rel="icon" href="../img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" /> <!--Apple用サイトアイコン-->
-  <meta charset="utf-8"> <!--文字セット-->
+  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <!--サイトアイコン-->
+  <link rel="icon" href="../img/icon.png" sizes="192x192" />
+  <!--サイトアイコン-->
+  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <!--Apple用サイトアイコン-->
+  <meta charset="utf-8">
+  <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  
-  <title>お問い合わせ | 高城寮</title> <!--タイトル-->
-  <meta property="og:site_name" content="お問い合わせ | 高城寮" /> <!--タイトル-->
-  <meta property="og:title" content="お問い合わせ | 高城寮"/> <!--タイトル-->
 
-  <meta name="description" content="高城寮公式ホームページです。"> <!--簡易説明-->
-  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
+  <title>お問い合わせ | 高城寮</title>
+  <!--タイトル-->
+  <meta property="og:site_name" content="お問い合わせ | 高城寮" />
+  <!--タイトル-->
+  <meta property="og:title" content="お問い合わせ | 高城寮" />
+  <!--タイトル-->
+
+  <meta name="description" content="高城寮公式ホームページです。">
+  <!--簡易説明-->
+  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
+  <!--URL指定-->
   <meta property="og:type" content="website">
-  <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
-  <meta property="og:image" content="https://www.tokuyama.ac.jp/dormitory/img/icon.png" /> <!--サイトアイコンURL-->
+  <meta property="og:description" content="高城寮公式ホームページです。" />
+  <!--簡易説明-->
+  <meta property="og:image" content="https://www.tokuyama.ac.jp/dormitory/img/icon.png" />
+  <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
-  <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
+  <meta property="og:locale" content="ja_JP" />
+  <!--言語設定-->
 </head>
+
 <body>
   <!--header-->
   <header id="header">
-    <a href="../index.html"><h1 id="title">Takajo Dormitory</h1></a>
-    <a href="../en/index.html"><h1 id="lang">ENGLISH</h3></a>
+    <a href="../index.html">
+      <h1 id="title">Takajo Dormitory</h1>
+    </a>
+    <a href="../en/index.html">
+      <h1 id="lang">ENGLISH</h1>
+    </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
-</header>
+  </header>
 
-<div id="wrapper">
-  <p class="btn-gnavi">
-    <span></span>
-    <span></span>
-    <span></span>
-  </p>
-  <nav id="bar">
-    <ul>
-      <div class="search">
-        <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
-        <div class="gcse-search"></div>
-      </div>
-      <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
-      <li><a href="purpose.html">寮の目的</a></li>
-      <li><a href="facility.html">施設,設備</a></li>
-      <li><a href="event.html">寮生活</a></li>
-      <li><a href="cost.html">学寮経費</a></li>
-      <li><a href="../belonging/index.html">寮生用ページ</a></li>
-      <li><a href="contact.html">お問い合わせ</a></li>
-    </ul>
-  </nav>
-</div>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
+        <div class="search">
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
+          <div class="gcse-search"></div>
+        </div>
+        <li><a href="../en/index.html">
+            <h3 class="lang">ENGLISH</h3>
+          </a></li>
+        <li><a href="purpose.html">寮の目的</a></li>
+        <li><a href="facility.html">施設,設備</a></li>
+        <li><a href="event.html">寮生活</a></li>
+        <li><a href="cost.html">学寮経費</a></li>
+        <li><a href="../belonging/index.html">寮生用ページ</a></li>
+        <li><a href="contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </div>
   <!--container-->
   <div id="container">
 
-  <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
-  <div id="contact">
-    <p>学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>
-      Email:<a href="mailto:ryoumu＠tokuyama.ac.jp?subject=問い合わせ">ryoumu＠tokuyama.ac.jp</a></p>
-  </div>
+    <p class="middle">ご質問、ご意見等ございましたら、学生寮までお寄せください。</p>
+    <div id="contact">
+      <p>学寮連絡先<br>〒745-8585 山口県周南市学園台<br>TEL&FAX : 0834-29-6236<br><br>学生課 寮務係<br>TEL : 0834-29-6231<br>
+        Email:<a href="mailto:ryoumu＠tokuyama.ac.jp?subject=問い合わせ">ryoumu＠tokuyama.ac.jp</a></p>
+    </div>
   </div>
 
-  
+
   <!--footer-->
   <div class="footer">
     <img src="../img/footer.png">
-    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
+    <a href="site.html">
+      <p><span id="site">このサイトについて</span></p>
+    </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script> <!--JS取り込み-->
-  </body>
+  <script src="../script/common.js"></script>
+  <!--JS取り込み-->
+</body>
+
 </html>
