--- a/html/location.html
+++ b/html/location.html
@@ -4,16 +4,13 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css"
-    media="screen and (min-width:0px) and (max-width:870px)">
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)">
   <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css"
-    media="screen and (min-width:870px) and (max-width:1270px)">
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)">
   <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)">
   <!--共通CSS-->
-  <link rel="stylesheet" href="../style/locationMin.css" type="text/css"
-    media="screen and (min-width:0px) and (max-width:1270px)">
+  <link rel="stylesheet" href="../style/locationMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:1270px)">
   <!--アクセスサイト用CSS-->
   <link rel="stylesheet" href="../style/location.css" type="text/css" media="screen and (min-width:1270px)">
   <!--アクセスサイト用CSS-->
@@ -91,8 +88,7 @@
 
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.6527980452624!2d131.84742641564495!3d34.05277638060586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3544e0c9c1b77aa9%3A0xcef289fe15db68a5!2z5b6z5bGx5bel5qWt6auY562J5bCC6ZaA5a2m5qChIOmrmOWfjuWvrg!5e0!3m2!1sja!2sjp!4v1601156582820!5m2!1sja!2sjp"
-      height="650" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-      id="map"></iframe>
+      height="650" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" id="map"></iframe>
     <p id="address">学寮連絡先<br>〒745-8585　山口県周南市学園台<br>TEL&FAX　0834-29-6236</p>
   </div>
 
