--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="style/commonMin.css" type="text/css"
-    media="screen and (min-width:0px) and (max-width:870px)">
+  <link rel="stylesheet" href="style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)">
   <!--共通CSS-->
-  <link rel="stylesheet" href="style/commonMid.css" type="text/css"
-    media="screen and (min-width:870px) and (max-width:1150px)">
+  <link rel="stylesheet" href="style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1150px)">
   <!--共通CSS-->
   <link rel="stylesheet" href="style/common.css" type="text/css" media="screen and (min-width:1150px)">
   <!--共通CSS-->
-  <link rel="stylesheet" href="style/indexMin.css" type="text/css"
-    media="screen and (min-width:0px) and (max-width:870px)">
+  <link rel="stylesheet" href="style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)">
   <!--index用CSS-->
-  <link rel="stylesheet" href="style/indexMid.css" type="text/css"
-    media="screen and (min-width:870px) and (max-width:1150px)">
+  <link rel="stylesheet" href="style/indexMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1150px)">
   <!--index用CSS-->
   <link rel="stylesheet" href="style/index.css" type="text/css" media="screen and (min-width:1150px)">
   <!--index用CSS-->
@@ -136,26 +132,23 @@
       <p id="arrow-prev" class="arrow">←</p>
       <p id="arrow-next" class="arrow">→</p>
     </div>
-    <p id="slider-content">学寮行事である寮生マッチや七夕会などを通じて、寮生どうしの親交が深まります。また、大人数でも快適に生活できるよう、設備が整備されています。<br><a
-        href="html/event.html">学寮行事→</a></p>
+    <p id="slider-content">学寮行事である寮生マッチや七夕会などを通じて、寮生どうしの親交が深まります。また、大人数でも快適に生活できるよう、設備が整備されています。<br><a href="html/event.html">学寮行事→</a></p>
 
     <div id="movie">
       <h2><span>Short Movie</span></h2>
       <iframe id="inner-video" src="https://www.youtube.com/embed/RhxgednKg8Y" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div id="links">
       <h2 id="links-title">SNS</h2>
       <div class="links-inner">
-        <p><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/TakajoDormitory"><i
-              class="fab fa-twitter fa-lg"></i>高城寮Twitter</a></p>
-        <p><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/takajodormitory/"><i
-              class="fab fa-instagram fa-lg"></i>高城寮Instagram</a></p>
+        <p><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/TakajoDormitory"><i class="fab fa-twitter fa-lg"></i>高城寮Twitter</a></p>
+        <p><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/takajodormitory/"><i class="fab fa-instagram fa-lg"></i>高城寮Instagram</a>
+        </p>
       </div>
-      <a class="twitter-timeline" data-width="500" data-height="700"
-        href="https://twitter.com/TakajoDormitory?ref_src=twsrc%5Etfw">Tweets by TakajoDormitory</a>
+      <a class="twitter-timeline" data-width="500" data-height="700" href="https://twitter.com/TakajoDormitory?ref_src=twsrc%5Etfw">Tweets by
+        TakajoDormitory</a>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
