--- a/html/env.html
+++ b/html/env.html
@@ -4,11 +4,9 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css"
-    media="screen and (min-width:0px) and (max-width:870px)">
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)">
   <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css"
-    media="screen and (min-width:870px) and (max-width:1270px)">
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)">
   <!--共通CSS-->
   <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)">
   <!--共通CSS-->
